# ssg-quarto-soc-analysis

./: .gitignore  README.md  pyproject.toml
.history/: styles_20240407014541.css  styles_20240407014558.css  styles_20240407014601.css  styles_20240407014606.css  styles_20240407014608.css  styles_20240407014610.css  styles_20240407014613.css  styles_20240407014615.css  styles_20240407014621.css
.history/site/: instructor_workload_20240407013751.qmd  instructor_workload_20240407013802.qmd  instructor_workload_20240407013805.qmd  instructor_workload_20240407013807.qmd  instructor_workload_20240407013811.qmd  instructor_workload_20240407013815.qmd  instructor_workload_20240407014033.qmd  instructor_workload_20240407014035.qmd  instructor_workload_20240407014100.qmd  instructor_workload_20240407014102.qmd  instructor_workload_20240407014114.qmd  instructor_workload_20240407014116.qmd  instructor_workload_20240407014126.qmd  (+269 more)
docs/: 10_download.html  20_clean.html  25_review.html  30_explore.html  31_explore.html  32_explore.html  35_explore2.html  40_workload.html  about.html  clean.html  download.html  explore.html  index.html  instructor_workload.html  search.json  sections_df.csv  stacked_df.csv  test.html
site/: 10_download.qmd  20_clean.ipynb  20_clean.qmd  25_review.qmd  30_explore.qmd  31_explore.qmd  35_explore2.qmd  40_workload.qmd  Makefile  _quarto.yml  about.qmd  clean.qmd  explore.qmd  final_df.csv  index.qmd  instructor_workload.qmd  sections_df.csv  selected_data.csv  stacked_df.csv  test.py  test.qmd  unique_instructors.csv
test/: test.html  test.qmd
(+453 files in other folders)
